# dataforge

./: .env.example  .gitignore  CLAUDE.md  README.md  data-product.example.yaml  pyproject.toml
docs/: CODE_REVIEW_FEEDBACK.md  NORTH_STAR.md
sandbox/: data_factory.tf  databricks.tf  key_vault.tf  networking.tf  outputs.tf  providers.tf  rbac.tf  resource_group.tf  storage.tf  terraform.tfvars.example  variables.tf
src/dataforge/: __init__.py  cli.py  config.py  constants.py
src/dataforge/generation/: __init__.py  data_product_generator.py  hcl_generator.py  prompts.py  renderer.py  tf_refs.py
src/dataforge/generation/generators/: __init__.py  adf_pipeline.py  ansible.py  base.py  cicd.py  cost_optimizer.py  drift.py  governance.py  monitoring.py  networking.py  quality.py  readiness.py  sre_dashboard.py
src/dataforge/generation/templates/: adf_pipeline.tf.j2  aks.tf.j2  azure-pipelines.yml.j2  data_factory.tf.j2  databricks.tf.j2  eventhub.tf.j2  fabric.tf.j2  governance.tf.j2  key_vault.tf.j2  monitoring.tf.j2  networking.tf.j2  outputs.tf.j2  providers.tf.j2  rbac.tf.j2  sql_mi.tf.j2  storage.tf.j2  variables.tf.j2
src/dataforge/generation/templates/ansible/: configure_databricks.yml.j2  inventory.yml.j2  requirements.yml.j2
src/dataforge/generation/templates/cicd/: azure_devops.yml.j2  github_actions.yml.j2
src/dataforge/generation/templates/cost/: analyze_costs.py.j2  azure_devops_cost.yml.j2  github_actions_cost.yml.j2
src/dataforge/generation/templates/drift/: azure_devops_drift.yml.j2  drift_notify.py.j2  github_actions_drift.yml.j2
src/dataforge/generation/templates/network/: dns.tf.j2  private_endpoints.tf.j2  sequencing.sh.j2
src/dataforge/generation/templates/quality/: databricks_jobs.tf.j2  run_checks.py.j2
src/dataforge/generation/templates/readiness/: conftest.py.j2  requirements.txt.j2  run_readiness.sh.j2  test_platform.py.j2  test_storage.py.j2
src/dataforge/generation/templates/sre/: runbook.md.j2  workbook.json.j2  workbook.tf.j2
src/dataforge/llm/: __init__.py  adapter.py  anthropic_adapter.py  openai_adapter.py
src/dataforge/models/: __init__.py  data_product.py  flow_graph.py  rbac.py  terraform.py
src/dataforge/parsing/: __init__.py  adf_importer.py  graph_validator.py  intent_parser.py  intent_resolver.py  prompts.py  yaml_parser.py
src/dataforge/portal/: __init__.py  app.py
src/dataforge/portal/static/: index.html
src/dataforge/rbac/: __init__.py  matrix.py  resolver.py  roles.py
src/dataforge/validation/: __init__.py  checkov_runner.py  infracost_runner.py  tfsec_runner.py
tests/: conftest.py
tests/e2e/: test_generate_command.py
tests/fixtures/flow_graphs/: simple_adls_databricks.json
tests/integration/: test_intent_parser.py  test_renderer_phase2.py
tests/unit/: test_adf_importer.py  test_adf_readiness_generators.py  test_ado_pipeline.py  test_flow_graph_models.py  test_generators.py  test_intent_resolver.py  test_l9_generators.py  test_llm_adapters.py  test_networking_generator.py  test_portal.py  test_rbac_matrix.py  test_rbac_resolver.py  test_tf_refs.py  test_validate_doctor.py  test_vnet_cidr_vars.py  test_workload_identity.py  test_yaml_parser.py
