[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dataforge"
version = "0.1.0"
description = "AI-powered Terraform generator for Azure data engineering stacks (ADF · Databricks · Fabric · AKS)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{ name = "DataForge Contributors" }]
keywords = ["terraform", "azure", "databricks", "data-factory", "fabric", "IaC", "AI"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Code Generators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "anthropic>=0.40",
    "click>=8.1",
    "jinja2>=3.1",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "rich>=13.7",       # pretty console output
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "ruff>=0.6",
    "mypy>=1.11",
    "types-jinja2",
]

[project.scripts]
dataforge = "dataforge.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/dataforge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=dataforge --cov-report=term-missing --cov-fail-under=70"

[tool.coverage.run]
source = ["src/dataforge"]

[tool.ruff]
line-length = 100
src = ["src"]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
