[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dataforge"
version = "0.1.0"
description = "AI-powered Terraform generator for Azure data engineering stacks (ADF · Databricks · Fabric · AKS)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "DataForge Contributors" }]
keywords = ["terraform", "azure", "databricks", "data-factory", "fabric", "IaC", "AI"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Code Generators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "anthropic>=0.40,<2.0",
    "click>=8.1,<9.0",
    "jinja2>=3.1,<4.0",
    "pydantic>=2.9,<3.0",
    "pydantic-settings>=2.5,<3.0",
    "rich>=13.7,<14.0",
    "pyyaml>=6.0,<7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9.0",
    "pytest-cov>=5.0,<7.0",
    "pytest-mock>=3.14,<4.0",
    "ruff>=0.6,<1.0",
    "mypy>=1.11,<2.0",
    "types-jinja2",
    "httpx>=0.27,<1.0",
]
portal = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "python-multipart>=0.0.9,<1.0",
]
openai = [
    "openai>=1.50,<2.0",   # covers OpenAI, Azure OpenAI, Groq, Ollama, Mistral (all OpenAI-compatible)
]

[project.scripts]
dataforge = "dataforge.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/dataforge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=dataforge --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
source = ["src/dataforge"]

[tool.ruff]
line-length = 100
src = ["src"]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
